--- a/landingpage.css
+++ b/landingpage.css
@@ -530,3 +530,155 @@ header{
         border-top: 1px solid #57ac80;
     }
 }
+
+
+
+/* SECT-THREE */
+
+.sect-3{
+    background-color: #F2F8F3;
+    padding: 40px 0;
+    border: 2px solid red;
+}
+
+.virtual{
+    border: 2px solid green;
+    width: 60%;
+    margin: auto;
+    display: grid;
+    /* grid-template-columns: 1fr 1fr; */
+    gap: 1em;
+}
+
+.virtual-card{
+    border: 3px solid blue;
+    width: 350px;
+}
+
+.green-card{
+    display: flex;
+    /* justify-content: space-between; */
+    align-items: center;
+}
+
+
+
+/* SECT-4 */
+
+.sect-4{
+    background-color: #FFFFFF;
+    padding: 100px 0;
+}
+
+.vibrant-text{
+    width: 24%;
+    margin: auto;
+    text-align: center;
+    margin-bottom: 30px;
+}
+
+.vibrant-card{
+    border: 2px solid red;
+    width: 70%;
+    margin: auto;
+    position: relative;
+    background-color: #10B259;
+    padding: 40px 60px 30px 60px;
+    border-radius: 30px;
+    overflow: hidden;
+    display: flex;
+    /* align-items: center; */
+    justify-content: space-between;
+    min-height: 100px;
+}
+
+.community-text{
+    margin: 40px 0;
+    color: white;
+    max-width: 42%;
+    z-index: 99;
+}
+
+.community-text h1{
+    font-size: 1.8em;
+    font-weight: 600;
+}
+
+.community-text p{
+    max-width: 58%;
+    margin: 20px 0 80px 0;
+    font-size: 1em;
+}
+
+.visit-link{
+    color: white;
+    text-decoration: none;
+}
+
+.vibrant-image{
+    position: absolute;
+    right: 120px;
+    bottom: 0;
+    height: 80%;
+    transform: translate(10%, -14%);
+    z-index: 1;
+}
+
+
+
+@media(max-width: 1347px){
+    .vibrant-image{
+       transform: translate(5%, 0);
+    }
+}
+
+@media(max-width: 1205px){
+    .vibrant-card{
+        width: 90%;
+        min-height: 480px;
+    }
+
+    .community-text p{
+        max-width: 100%;
+        margin: 20px 0 120px 0;
+    }
+
+    .vibrant-image{
+       transform: translate(5%, -4%);
+    }
+
+    .vibrant-image img{
+        width: 300px;
+    }
+}
+
+@media(max-width: 990px){
+    .vibrant-card{
+        padding: 40px 30px 30px 30px;
+        min-height: 450px;
+    }
+    .community-text{
+        max-width: 48%;
+    }
+
+    .community-text h1{
+    font-size: 1.6em;
+    }
+    .vibrant-image{
+        right: 80px;
+    }
+}
+
+@media(max-width: 850px){
+    .vibrant-image{
+        right: 50px;
+        transform: translate(5%, 0);
+    }
+}
+
+@media(max-width: 750px){
+    .vibrant-card{
+        border: 4px solid blue;
+        flex-direction: column;
+    }
+}
