--- a/landingpage.css
+++ b/landingpage.css
@@ -842,3 +842,77 @@ header{
         grid-template-columns: 2fr;
     }
 }
+
+/* FOOTER */
+footer{
+    border: 2px solid red;
+    padding: 20px 0;
+    background-color: #f2f8f3;
+}
+
+.footer-wrap{
+    border: 2px solid blue;
+    width: 86%;
+    margin: auto;
+    background-color: #FFFFFF;
+    padding: 30px 0;
+}
+
+.footer-head{
+    text-align: center;
+    color: #000000;
+    font-size: 2.2em;
+    font-weight: 500;
+    margin-bottom: 20px;
+}
+
+.footer-images{
+    width: 80%;
+    margin: auto;
+     background-color: white;
+      padding: 40px 20px;
+      display: flex;
+      justify-content: center;
+}
+
+.footer-image{
+    display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
+      gap: 1em;
+      align-items: center;
+      justify-content: center;
+      justify-items: center;
+      text-align: center;
+      max-width: 1000px;
+      width: 100%;
+}
+
+.footer-image img{
+    max-width: 100%;
+      height: auto;
+      object-fit: contain;
+      max-height: 60px;
+}
+
+.footer-line1{
+    border-top: thin solid #0A9600;
+    width: 90%;
+    margin: auto;
+}
+
+/* FOOTER-IMAGE-MEDIA-QUERY */
+
+@media(max-width: 970px){
+    .footer-wrap{
+        width: 100%;
+    }
+    .footer-images{
+        width: 80%
+    }
+}
+
+@media(max-width: 550px){
+    .footer-images{
+        width: 88%;
+    }
+}
