--- a/othercsspages/products.css
+++ b/othercsspages/products.css
@@ -10,7 +10,7 @@
 /* HEADER */
 
 header{
-    background-color: #F2F8F3;
+    background-color: #0D60D8;
 }
 
 .nav-links{
@@ -30,7 +30,7 @@ header{
 
 .menu-lists li a{
     text-decoration: none;
-    color: #000000;
+    color: #FFFFFF;
     font-size: 1em;
 }
 
@@ -42,8 +42,8 @@ header{
 
 .signin{
     text-decoration: none;
-    border: 1px solid #122231;
-    color: #122231;
+    border: 1px solid #FFFFFF;
+    color: #FFFFFF;
     font-size: 1em;
     font-weight: 400;
     padding: 12px 12px;
@@ -52,11 +52,11 @@ header{
 
 .create{
     text-decoration: none;
-    background-color: #122231;
-    color: #FFFFFF;
+    background-color: #FFFFFF;
+    color: #122231;
     padding: 12px 14px;
     font-size: 1em;
-    font-weight:500;
+    font-weight:600;
     border-radius: 10px;
 }
 
@@ -95,3 +95,200 @@ header{
         visibility: visible;
     }
 }
+
+/* HERO-SECT */
+.hero-sect{
+    background-color: #0D60D8;
+}
+.hero{
+    border: 2px solid white;
+    width: 86%;
+    margin: 0 0 0 14%;
+    display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 50px 0px 0px 0px;
+  position: relative;
+  overflow: hidden;
+}
+
+.hero-left{
+    border: 2px solid red;
+    width: 37%;
+    /* flex: 1; */
+  z-index: 2;
+  color: #FFFFFF;
+}
+
+.hero-left h1{
+    font-size: 3.2em;
+  /* line-height: 1.3; */
+  font-weight: 600;
+  margin-bottom: 20px;
+}
+
+.hero-left p{
+    font-size: 16px;
+   margin: 20px 0;
+}
+
+.hero-right{
+    border: 2px solid green;
+    /* flex: 1; */
+  position: relative;
+  width: 45%;
+  height: 580px;
+}
+
+.phone-image{
+    position: absolute;
+  top: 55%;
+  right: 36%;
+  transform: translate(-2%,-37%);
+  z-index: 2;
+  max-width: 356px;
+  height: auto;
+}
+
+.coin-whistle{
+    position: absolute;
+  bottom: 0;
+  right: 0%;
+  z-index: 1;
+  width: 280px;
+  opacity: 0.95;
+}
+
+
+@media(max-width: 1271px){
+    .hero{
+        width: 88%;
+       margin: 0 0 0 12%;
+    }
+}
+
+@media(max-width: 1200px){
+    .hero{
+        width: 92%;
+        margin: 0 0 0 8%;
+    }
+
+    .phone-image{
+        right: 30%;
+    }
+}
+
+@media(max-width: 1166px){
+    .hero{
+        width: 100%;
+        margin: 0 0 0 0;
+        padding: 50px 0 0 20px;
+    }
+    .hero-left{
+        width: 41%;
+    }
+    .phone-image{
+        right: 10%;
+    }
+}
+
+@media(max-width: 966px){
+    .hero{
+        flex-direction: column;
+        text-align: center;
+        padding: 50px 10px 0 10px;
+    }
+
+    .hero-left{
+        width: 80%;
+    }
+
+    .hero-right{
+        width: 80%;
+        margin: 0 auto;
+    }
+    .phone-image{
+        transform: translateY(-34%);
+        right: 24%;
+        max-width: 340px;
+        
+    }
+
+    .coin-whistle{
+        width: 240px;
+        
+    }
+}
+
+@media(max-width: 667px){
+    .hero-left{
+        width: 94%;
+    }
+
+    .hero-left h1{
+        font-size: 2.4em;
+    }
+
+    .hero-right{
+        width: 100%;
+    }
+
+    .phone-image{
+        max-width: 300px;
+        transform: translateY(-30%);
+        right: 16%;
+    }
+}
+
+@media(max-width: 470px){
+    .phone-image{
+        max-width: 280px;
+        right: 10%;
+    }
+}
+
+@media(max-width: 400px){
+    .phone-image{
+        max-width: 260px;
+        right: 8%;
+    }
+}
+/* .hero-sect{
+    background-color: #0D60D8;
+}
+
+.hero{
+    border: 2px solid red;
+    display: flex;
+    justify-content: space-between;
+     z-index: 99;
+    min-height: 480px;
+}
+
+.hero-left{
+    border: 2px solid green;
+    width: 40%;
+}
+
+
+.hero-right{
+    border: 2px solid white;
+    width: 40%;
+    position: relative;
+}
+
+
+.phone-image {
+  position: absolute;
+  right: 10%;
+  z-index: 2;
+  transform: translateY(-45%);
+  
+}
+
+.coin-whistle {
+  position: absolute;
+  bottom: 0;
+  right: 0%;
+  z-index: 1;
+} */
