--- a/othercsspages/products.css
+++ b/othercsspages/products.css
@@ -101,7 +101,7 @@ header{
     background-color: #0D60D8;
 }
 .hero{
-    border: 2px solid white;
+    border: 2px solid black;
     width: 86%;
     margin: 0 0 0 14%;
     display: flex;
@@ -113,28 +113,51 @@ header{
 }
 
 .hero-left{
-    border: 2px solid red;
     width: 37%;
-    /* flex: 1; */
   z-index: 2;
   color: #FFFFFF;
 }
 
 .hero-left h1{
     font-size: 3.2em;
-  /* line-height: 1.3; */
   font-weight: 600;
   margin-bottom: 20px;
 }
 
 .hero-left p{
     font-size: 16px;
+    font-weight: 450;
    margin: 20px 0;
 }
 
+.hero-flags{
+    display: flex;
+}
+
+.hero-flag{
+    background-color: white;
+    display: flex;
+    align-items: center;
+    gap: .6em;
+    padding: 6px 30px 6px 20px;
+    border-radius: 20px;
+}
+
+.hero-flag span{
+    font-size: 1.2em;
+    color: #206CDB;
+    font-weight: 400;
+}
+
+.download{
+    display: flex;
+    gap: 1em;
+}
+
+.download img{
+    border-radius: 4px;
+}
 .hero-right{
-    border: 2px solid green;
-    /* flex: 1; */
   position: relative;
   width: 45%;
   height: 580px;
@@ -160,6 +183,7 @@ header{
 }
 
 
+/* HERO-SECT-MEDIA-QUERY */
 @media(max-width: 1271px){
     .hero{
         width: 88%;
@@ -203,6 +227,13 @@ header{
         width: 80%;
     }
 
+    .hero-flags{
+        justify-content: center;
+    }
+
+    .download{
+        justify-content: center;
+    }
     .hero-right{
         width: 80%;
         margin: 0 auto;
@@ -229,6 +260,9 @@ header{
         font-size: 2.4em;
     }
 
+    .download img{
+        width: 130px;
+    }
     .hero-right{
         width: 100%;
     }
@@ -253,42 +287,125 @@ header{
         right: 8%;
     }
 }
-/* .hero-sect{
-    background-color: #0D60D8;
+
+
+
+/* SECT-2 */
+
+.sect-2{
+    background-color: #F2F8F3;
+    padding: 40px 0;
 }
 
-.hero{
+.pay-bills{
     border: 2px solid red;
+    width: 70%;
+    margin: auto;
+}
+
+.bills-text{
+    margin-bottom: 50px;
+}
+.pay-bills h1{
+    font-size: 2.4em;
+    font-weight: 550;
+    color: #000000;
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.bills-para{
+    border: 2px solid red;
+    width: 46%;
+    margin: auto;
+    font-size: 1em;
+    text-align: center;
+}
+
+.bill-cards{
+    border: 2px solid blue;
+    width: 100%;
+    display: grid;
+    grid-template-columns:repeat(auto-fit, minmax(300px, 1fr));
+    gap: 1em;
+}
+.bill-card{
+    background: white;
+    border-radius: 16px;
+    padding: 30px 30px 10px 30px ;
+    height: 540px;
+    overflow: hidden;
+}
+
+.bill-card h2{
+    font-size: 2.2em;
+  font-weight: 500;
+  color: #0D60D8;
+  margin-bottom: 16px;
+}
+
+.bill-card p{
+    font-size: 14px;
+    margin-bottom: 30px;
+}
+
+.top-up{
+    background-color: #DFFFE8;
+    padding: 14px 14px 8px 14px;
+    color: #0D60d8;
+    border-radius: 10px;
+     
+}
+.top{
+    text-align: center;
+}
+.top-up span{
+    font-weight: 600;
+}
+.purchase{
+    margin-top: 10px;
     display: flex;
-    justify-content: space-between;
-     z-index: 99;
-    min-height: 480px;
+    gap: 1em;
 }
 
-.hero-left{
-    border: 2px solid green;
-    width: 40%;
+.purchase p{
+    font-size: 13px;
 }
 
-
-.hero-right{
-    border: 2px solid white;
-    width: 40%;
-    position: relative;
+.fa-basket-shopping{
+    background-color: b5fde5;
 }
 
-
-.phone-image {
-  position: absolute;
-  right: 10%;
+.phone-frame {
+  width: 250px;
+  height: 100%;
+  border-radius: 30px;
+  /* overflow: hidden; */
   z-index: 2;
-  transform: translateY(-45%);
-  
+  transform: scale(1.05) translateY(10%); /* affects whole frame */
 }
 
-.coin-whistle {
-  position: absolute;
-  bottom: 0;
-  right: 0%;
-  z-index: 1;
+.phone-frame img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  display: block;
+  transform: scale(1.05); 
+}
+
+/* .bill-img1{
+    transform: translateY(4%);
+    z-index: 2;
+    max-width:270px;
+    position: static;
+    margin: auto;
+    height: auto;
 } */
+
+.bill-img2{
+    transform: translate(4%, 7%);
+    z-index: 2;
+    max-width:270px;
+    margin: auto;
+    height: auto;
+}
