--- a/othercsspages/products.css
+++ b/othercsspages/products.css
@@ -101,7 +101,6 @@ header{
     background-color: #0D60D8;
 }
 .hero{
-    border: 2px solid black;
     width: 86%;
     margin: 0 0 0 14%;
     display: flex;
@@ -298,7 +297,6 @@ header{
 }
 
 .pay-bills{
-    border: 2px solid red;
     width: 70%;
     margin: auto;
 }
@@ -547,5 +545,330 @@ header{
     }
     .phone-frame1, .phone-frame2{
         width: 230px;
+    }
+}
+
+
+/* SECT-3 */
+
+.sect-3{
+    background-color: #0D60D8;
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 50px;
+}
+
+.client-text{
+    width: 30%;
+    height: auto;
+    margin: 50px auto;
+}
+
+.client-text h2{
+    width: 70%;
+    margin-bottom: 40px;
+    color: #FFFFFF;
+    font-size: 2.6em;
+    font-weight: 550;
+}
+
+.client-text p{
+    color: #FFFFFF;
+    font-size: 1em;
+}
+.client{
+    width: 40%;
+}
+.client img{
+    max-width: 100%;
+    height: 100%;
+}
+
+/* SECT-2-MEDIA-QUERY */
+
+@media(max-width: 1200px){
+    .client-text{
+        width: 52%;
+        margin: 50px 40px;
+    }
+
+    .client-text h2{
+        width: 100%;
+    }
+
+    .client{
+        max-width: 36%;
+    }
+}
+
+@media(max-width: 1044px){
+    .client-text{
+        margin: 50px 30px;
+    }
+}
+
+@media(max-width: 1012px){
+    .client-text{
+        width: 56%;
+    }
+}
+
+@media(max-width: 990px){
+    .sect-3{
+        padding: 40px 0 60px 0;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .client-text{
+        width: 70%;
+        margin: 50px auto;
+        text-align: center;
+    }
+
+    .client-text h2{
+        font-size: 2.2em;
+    }
+    .client{
+        width: 600px;
+        max-width: 90%;
+        margin: 0 auto;
+    }
+
+    .client img{
+        /* width: 100%;  */
+        max-width: 100%;
+        height: auto;
+        border-radius: 16px;
+    }
+}
+
+
+@media(max-width: 830px){
+    .client{
+        width: 550px;
+        max-width: 90%;
+    }
+}
+
+@media(max-width: 756px){
+    .client-text{
+        width: 90%;
+    }
+
+    .client{
+        width: 650px;
+    }
+}
+
+
+/* SECT-4 */
+
+.sect-4{
+    padding: 60px 0;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+
+.sect-4 h1{
+    font-size: 2.6em;
+    font-weight: 600;
+    color: #000000;
+    width: 42%;
+    text-align: center;
+    margin-bottom: 50px;
+}
+
+.yemisi iframe{
+    border-radius: 20px;
+}
+
+/* SECT-4-MEDIA-QUERY */
+
+@media(max-width: 1200px){
+
+    .sect-4 h1{
+        width: 50%;
+    }
+    .yemisi iframe{
+        width: 800px;
+    }
+}
+
+@media(max-width: 990px){
+
+    .sect-4 h1{
+        width: 80%;
+        font-size: 2em;
+        font-weight: 550;
+    }
+    .yemisi{
+        width: 900px;
+        max-width: 90%;
+        height: 460px;
+    }
+    .yemisi iframe{
+        width: 100%;
+        height: 100%;
+    }
+}
+
+@media(max-width: 500px){
+
+    .sect-4 h1{
+        width: 90%;
+        font-size: 1.8em;
+    }
+}
+
+/* SECT-5 */
+
+.sect-5{
+    background-color: #f2f8f3;
+    padding: 70px 0;
+}
+
+.visit-cardify{
+    width: 70%;
+    margin: auto;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 2em;
+    padding: 20px 0;
+}
+
+.cardifys{
+    padding: 10px 0;
+    display: flex;
+    gap: 1em;
+}
+
+.cardifys-icon{
+    background-color: white;
+    padding: 16px;
+    border-radius: 12px;
+    width: 54px;
+}
+
+.visit-text span{
+    color: #000000;
+    font-size: 1em;
+    font-weight: 500;
+}
+.visit-text p{
+    font-size: .9em;
+    color: #212529;
+    margin-top:6px;
+    margin-bottom: 6px;
+}
+.visit-text a{
+    font-size: .9em;
+    text-decoration: none;
+    color: #303231;
+    font-weight: 500;
+}
+
+
+/* SECT-5-MEDIA-QUERY */
+
+@media(max-width: 1118px){
+    .visit-cardify{
+        width: 80%;
+    }
+}
+
+@media(max-width: 950px){
+    .sect-5{
+        padding: 70px 10px;
+    }
+    .visit-cardify{
+        width: 100%;
+    }
+
+    .cardifys-icon{
+        padding: 14px;
+        width:50px;
+    }
+}
+
+@media(max-width: 770px){
+
+    .visit-cardify{
+        grid-template-columns: 2fr;
+    }
+}
+
+/* FOOTER */
+footer{
+    border: 2px solid red;
+    padding: 20px 0;
+    background-color: #f2f8f3;
+}
+
+.footer-wrap{
+    border: 2px solid blue;
+    width: 86%;
+    margin: auto;
+    background-color: #FFFFFF;
+    padding: 30px 0;
+}
+
+.footer-head{
+    text-align: center;
+    color: #000000;
+    font-size: 2.2em;
+    font-weight: 500;
+    margin-bottom: 20px;
+}
+
+.footer-images{
+    width: 80%;
+    margin: auto;
+     background-color: white;
+      padding: 40px 20px;
+      display: flex;
+      justify-content: center;
+}
+
+.footer-image{
+    display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
+      gap: 1em;
+      align-items: center;
+      justify-content: center;
+      justify-items: center;
+      text-align: center;
+      max-width: 1000px;
+      width: 100%;
+}
+
+.footer-image img{
+    max-width: 100%;
+      height: auto;
+      object-fit: contain;
+      max-height: 60px;
+}
+
+.footer-line1{
+    border-top: thin solid #0A9600;
+    width: 50%;
+    margin: auto;
+}
+
+/* FOOTER-IMAGE-MEDIA-QUERY */
+
+@media(max-width: 970px){
+    .footer-wrap{
+        width: 100%;
+    }
+    .footer-images{
+        width: 80%
+    }
+}
+
+@media(max-width: 550px){
+    .footer-images{
+        width: 88%;
     }
 }
